Fixes table overlap on window resize changes the table layout from fixed to relative [fixes  #161696001]

--- a/UI/static/css/_table.css
+++ b/UI/static/css/_table.css
@@ -4,7 +4,7 @@ table {
   margin: 0;
   padding: 0;
   width: 100%;
-  table-layout: fixed;
+  table-layout: relative;
 }
 
 table caption {
